<resources>
    <string name="app_name">Tools_Store_App</string>
    <string name="enter_email">Nhập Email</string>
    <string name="enter_password">Nhập mật khẩu</string>
    <string name="register_now">Chưa có tài khoản ? Đăng ký ngay</string>
    <string name="login">Đăng nhập</string>
    <string name="enter_name">Nhập tên của bạn</string>
    <string name="register">Đăng ký</string>
    <string name="login_now">Đã có tài khoản ? Đăng nhập ngay</string>
    <string name="tee_details">Áo thun tay ngắn làm bằng chất liệu 100% cotton thoáng mát</string>
    <string name="checkout">Thanh toán</string>
    <string name="logout">Đăng xuất</string>
</resources>